# tispa-backend

./: Cargo.toml  Dockerfile  Dockerfile.builder  Dockerfile.development  README.md  dev_container_shell.sh  docker-compose.override.sample.yml  docker-compose.yml  update.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.override.sample.yml  docker-compose.yml
.github/utils/: git-restore-mtime.py
.github/workflows/: deploy-staging.yml  deploy.yml
cfg/: nginx.conf
docs/: schema.md
migrations/: 1_setup.sql  2_users.sql  3_accounts.sql  4_events.sql  5_groups.sql  6_group_users.sql  7_schedules.sql  8_participants.sql  9_expenses.sql
src/: errors.rs  main.rs  oauth.rs  twitter.rs
src/routing/: oauth.rs
