[package]
name = "tispa-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.52", features = ["backtrace"] }
async-redis-session = "0.2.2"
async-session = "3.0.0"
axum = "0.4.3"
tokio = { version = "1.0", features = ["full"] }
uuid = "0.8.2"
