[package]
name = "tispa-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.52", features = ["backtrace"] }
async-redis-session = "0.2.2"
async-session = "3.0.0"
oauth2 = "4.1"
axum = { version = "0.4.4", features = ["headers"] }
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.2", features = ["request-id", "trace", "util"] }
tower-layer = "0.3"
tower-service = "0.3"
tokio = { version = "1.15.0", features = ["macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
headers = "0.3"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
thiserror = "1.0.30"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.9.0"
